--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,7 +9,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".ui.GameActivity"></activity>
+        <activity android:name=".pruebas.CoreActivity"></activity>
+        <activity android:name=".ui.GameActivity" />
         <activity android:name=".ui.LoginActivity" />
         <activity android:name=".SplashScreen">
             <intent-filter>
